--- a/puctesis_refs.bib
+++ b/puctesis_refs.bib
@@ -1460,4 +1460,9 @@
 	title = {{How Chief Executives' Characteristics Influence Economic Growth?}},
 	year = {2016}
 }
-
+@book{tarrant1992stalingrad,
+	title={Stalingrad},
+	author={Tarrant, VE},
+	year={1992},
+	publisher={Pen and Sword}
+}
